Fix puppy sticker placement

--- a/index.html
+++ b/index.html
@@ -322,6 +322,11 @@
             <p id="yes-body">...</p>
 
             <div class="ticket">
+                <img src="puppy1.png" class="puppy-sticker"
+                    style="left: -10px; bottom: -10px; transform: rotate(10deg);">
+                <img src="puppy2.png" class="puppy-sticker"
+                    style="right: -10px; bottom: -10px; transform: rotate(-10deg);">
+
                 <h3>Invitation Officielle</h3>
                 <p>Rendez-vous le 15 Février</p>
                 <button class="btn-secondary btn-small" id="reveal-btn" style="width:100%; margin-top:10px;">
@@ -329,11 +334,6 @@
                 </button>
 
                 <div id="details-collapse" class="hidden details-content" style="position: relative;">
-                    <img src="puppy1.png" class="puppy-sticker"
-                        style="left: -15px; top: -25px; transform: rotate(-15deg);">
-                    <img src="puppy2.png" class="puppy-sticker"
-                        style="right: -15px; top: -25px; transform: rotate(15deg);">
-
                     <div class="detail-item"><span class="detail-icon">📅</span><strong>Date :&nbsp;</strong> 15 Février
                         2026</div>
                     <div class="detail-item"><span class="detail-icon">📍</span><span id="place-text">...</span></div>
