Fix: Yes button z-index issue

--- a/index.html
+++ b/index.html
@@ -158,12 +158,18 @@
             border: 2px solid var(--color-primary);
         }
 
+        #btn-yes {
+            position: relative;
+            z-index: 3000;
+        }
+
         #btn-no {
             background: #eee;
             color: #777;
             border: none;
             transition: top 0.2s ease, left 0.2s ease;
             position: relative;
+            z-index: 1000;
         }
 
         .smoke-particle {
